# src/controllers/store.controller.js
@@ -1,15 +1,6 @@
-import StoreService from '../services/store.service.js';
-
-const addStore = async (req, res) => {
-    const { regionId } = req.params;
-    const storeData = req.body;
-
-    try {
-        const store = await StoreService.addStore(regionId, storeData);
-        return res.status(201).json(store);
-    } catch (error) {
-        return res.status(400).json({ error: error.message });
-    }
-};
-
-export { addStore as addStoreController };
+import { getStoreMissionsProvider } from '../providers/store.provider.js';
+import { status } from '../config/response.status.js';
+import { response } from '../config/response.js';
+export const getStoreMissions = async (req, res, next) => {
+    return res.send(response(status.SUCCESS, await getStoreMissionsProvider(req.params.storeId)));
+}
