# src/controllers/user.controller.js
@@ -1,11 +1,20 @@
-import { response } from "../config/response.js";
-import { status } from "../config/response.status.js";
-
+import { getUserReviewsProvider, getUserOngoingMissionsProvider, completeUserMissionProvider } from '../providers/user.provider.js';
+import { response, status } from '../config/response.status.js';
 import { joinUser } from "../services/user.service.js";
 
 export const userSignin = async (req, res, next) => {
-    console.log("회원가입을 요청하였습니다!");
-    console.log("body:", req.body); // 값이 잘 들어오나 찍어보기 위한 테스트용
+    return res.send(response(status.SUCCESS, await joinUser(req.body)));
+}
 
-    res.send(response(status.SUCCESS, await joinUser(req.body)));
+export const getUserReviews = async (req, res, next) => {
+    return res.send(response(status.SUCCESS, await getUserReviewsProvider(req.params.userId, req.query)));
+}
+
+export const getUserOngoingMissions = async (req, res, next) => {
+    return res.send(response(status.SUCCESS, await getUserOngoingMissionsProvider(req.params.userId)));
+}
+
+export const completeUserMission = async (req, res, next) => {
+    await completeUserMissionProvider(req.params.userId, req.params.missionId);
+    return res.send(response(status.SUCCESS));
 }
