# src/models/store.sql.js
@@ -1,0 +1,4 @@
+export const getStoreMissionsQuery = 
+"SELECT mission_id, mission_name, description, reward "
++ "FROM missions "
++ "WHERE store_id = ?;"
